Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
 #theme: jekyll-theme-cayman
 title: 国家重点研发计划“复杂灾害条件下生命搜救装备研究与应用示范”项目
 description: 2018年7月-2021年6月
